Squashed a bug preventing Spotify from quitting (thanks to kryten2 from Macrumors forums)

--- a/SpotiFree.app/Contents/Info.plist
+++ b/SpotiFree.app/Contents/Info.plist
@@ -32,15 +32,15 @@
 		<key>dividerCollapsed</key>
 		<false/>
 		<key>eventLogLevel</key>
-		<integer>2</integer>
+		<integer>-1</integer>
 		<key>name</key>
 		<string>ScriptWindowState</string>
 		<key>positionOfDivider</key>
-		<real>570</real>
+		<real>541</real>
 		<key>savedFrame</key>
-		<string>897 137 770 921 0 0 1920 1058 </string>
+		<string>104 137 857 921 0 0 1920 1058 </string>
 		<key>selectedTabView</key>
-		<string>event log</string>
+		<string>result</string>
 	</dict>
 </dict>
 </plist>
