Revised patching and Spotifree state info

--- a/Spotifree/Patches.plist
+++ b/Spotifree/Patches.plist
@@ -9,7 +9,7 @@
 		<key>patchData</key>
 		<array>
 			<dict>
-				<key>location</key>
+				<key>offset</key>
 				<integer>1331960</integer>
 				<key>bytes</key>
 				<array>
